# flexi-deep-research-langgraph

./: .env.example  .gitignore  README.md  env.sh  inspect_chroma.py  pyproject.toml  requirements.txt
.agent/rules/: command-permissions.md  environment-activation.md
docs/: knowledge_base_setup.md  mcp_server_integration.md
examples/: README.md
examples/comparative_evaluation/: comparison_report.md
examples/comparative_evaluation/baseline/: summary.json
examples/comparative_evaluation/experimental/: summary.json
examples/quick_evaluation/: summary.json
examples/quick_evaluation/javascript_closures/: report.md  trace.json
scripts/: setup_knowledge_base.py
scripts/diagnostics/: check_ddg_real.py  check_search_connectivity.py  manual_test_kb_tools.py  test_tavily_connectivity.py
src/flexi/agents/: architect.py  graph_builder.py
src/flexi/config/: prompts.yaml  settings.py
src/flexi/core/: llm_provider.py  mcp_client.py  mcp_manager.py  state.py  (+2 more)
tests/: conftest.py  test_architect_complex.py  test_architect_medium.py  test_architect_simple.py  test_deep_research_kb.py  test_end_to_end_complex.py  test_end_to_end_medium.py  test_end_to_end_simple.py  test_llm_connectivity.py  test_mcp_integration.py
tests/integration/: test_deep_research_kb.py  test_e2e_flows.py  test_mcp_weather_e2e.py  test_tavily_error_reporting.py
tests/unit/: test_architect_extraction.py  test_architect_logic.py  test_context_hygiene_logic.py  test_markdown_tool_extraction.py  test_parallel_logic.py  test_pruning_logic.py  test_supervisor_parsing.py  test_web_search_fallback.py
(+12 files in other folders)
